# Django-Observatory

./: .gitignore  README.md  conftest.py  main.py  pyproject.toml  pytest.ini
src/django_observatory/: apps.py  middleware.py  models.py  urls.py  views.py
src/django_observatory/management/commands/: observatory.py
src/django_observatory/migrations/: 0001_initial.py  0002_request_request_body_request_request_headers_and_more.py  0003_job.py
src/django_observatory/templates/django_observatory/: dashboard.html  job_detail.html  request_detail.html
tests/: conftest.py  test_dashboard.py  test_job_details.py  test_jobs.py  test_reprocessing.py
