[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-observatory"
version = "0.1.0"
description = "Django Observatory - A debugging and monitoring panel for Django projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["django_observatory*"]



[dependency-groups]
dev = [
    "pytest",
]
